--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "tenacity>=8.0",
     "fastapi>=0.110.0",
     "uvicorn>=0.29.0",
+    "google-genai>=1.59.0",
+    "pillow>=12.1.0",
 ]
 
 [project.optional-dependencies]
